Advancement in the web implementation

--- a/studente.html
+++ b/studente.html
@@ -33,13 +33,13 @@
 				<tr>
 					<th>Email</th>
 					<td>giovanni.giorgio@studenti.unimi.it</td>
-					<td></td>
+					<td class="no-delim"></td>
 				</tr>
 				<tr class="spacer"><td></td></tr>
 				<tr>
 					<th>N° Matricola</th>
 					<td>951175</td>
-					<td></td>
+					<td class="no-delim"></td>
 				</tr>
 				<tr class="spacer"><td></td></tr>
 				<tr>
@@ -66,6 +66,11 @@
 				<td>Triennale</td>
 			</tr>
 		</table>
+		<div class="mt-3 d-flex align-items-center">
+			<a class="ms-4 btn" href="/studente/carriera">Vai alla Carriera</a>
+			<a class="ms-4 btn" href="/studente/appelli">Vai agli Appelli</a>
+		</div>
+		
 		<div id="study-accordion">
 			<div class="my-4">
 				<div class="d-flex align-items-center">
